# direct_score

./: .gitignore  CLAUDE.md  README.md  generate_report.py  main.py  model_governance.py  pyproject.toml  report.docx  scoring.py  stakeholder_charts.py  todo_list.md  training.py  training_constants.py  training_features.py  training_reporting.py
docs/: stakeholder_chart_pack.md
notebooks/: 3-model.ipynb
tests/: conftest.py  test_additional_coverage.py  test_feature_engineering.py  test_features.py  test_generate_report.py  test_governance.py  test_model_selection.py  test_new_features.py  test_pipeline.py  test_population_bias.py  test_reject_inference.py  test_reporting.py  test_split_and_eval.py  test_stability.py  test_stakeholder_charts.py  test_statistics.py  test_utils.py
