[project]
name = "direct-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.0.0",
    "loguru>=0.7.3",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
]
