[project]
name = "direct-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.5.0",
    "shap>=0.43.0",
    "tqdm>=4.66.0",
    "catboost>=1.2.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
direct-score = "training:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
